...
  @override
  Widget build(BuildContext context) {
    final userProvider = Provider.of<UserProvider>(context, listen: true);
    final addFriendFn = userProvider.addFriend;

    return SpeedDial(
      key: const Key('speedDial'),
      elevation: 5,
      icon: LineAwesomeIcons.plus,
      activeIcon: LineAwesomeIcons.times,
      backgroundColor: Theme.of(context).colorScheme.primary,
      foregroundColor: Theme.of(context).colorScheme.onPrimary,
      children: [
...
